# clima-airports

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml
data/mrlm/: .gitignore
src/: config.py  queries.py
src/models/: __init__.py  icao.py  station.py
tests/: test_config.py  test_icao.py  test_queries.py  test_station.py
tests/mocks/data/: metars.csv
